appbar z-index fixed

--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ html, body {
     box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.4);
     height: 56px;
     width: 100vw;
-    z-index: 1;
+    z-index: 2;
     transform: translateY(-100vh);
     animation: animate .2s forwards;
 }
